--- a/archive.html
+++ b/archive.html
@@ -3,6 +3,7 @@ layout: page
 title: Archive by year
 ---
 
+<!--
 {% assign postsByYear = site.posts | group_by_exp:"post", "post.date | date: '%Y'" %}
 <nav aria-label="year">
   <h2>{% for year in postsByYear %}
@@ -32,3 +33,20 @@ title: Archive by year
   </li>
 {% endfor %}
 </ul>
+-->
+
+{% assign postsByYear = site.posts | group_by_exp:"post", "post.date | date: '%Y'" %}
+    {% for year in postsByYear %}
+      <h1>{{ year.name }}</h1>
+      {% assign postsByMonth = year.items | group_by_exp:"post", "post.date | date: '%B'" %}
+
+      {% for month in postsByMonth %}
+        <h2>{{ month.name }}</h2>
+        <ul>
+          {% for post in month.items %}
+            <li>{% include post-list.html %}</li>
+          {% endfor %}
+        </ul>
+
+      {% endfor %}
+    {% endfor %}
