--- a/syndication/stylish-blur.html
+++ b/syndication/stylish-blur.html
@@ -7,22 +7,22 @@ pagination:
 title: Stylish Blur
 ---
 
-# Stylish Blur
-
+<h1 id="stylish-blur">Stylish Blur</h1>
+  
 {% if paginator.page > 1 %}
-  ## Page {{ paginator.page }}
+  <h2 id="page-paginator-page-">Page {{ paginator.page }}</h2>
 {% endif %}
 
----
+<hr>
 
-### Syndication
-This is the full syndication of the blog: [Stylish Blur](https://stylishblur.tumblr.com), which was orignally posted on [Tumblr](https://tumblr.com).
+<p>iPhoneography of <a href="https://instagram.com/jden">jden redden</a>. Shot, edited and uploaded from an iPhone 4.</p>
 
----
+<hr>
 
-iPhoneography of [jden redden](https://instagram.com/jden). Shot, edited and uploaded from an iPhone 4.
+<h3 id="syndication">Syndication</h3>
+<p>This is the full syndication of the blog: <a href="https://stylishblur.tumblr.com">Stylish Blur</a>, which was orignally posted on <a href="https://tumblr.com">Tumblr</a>.</p>
 
----
+<hr>
 
 <p>Filter the archive by: <a href="{{ site.baseurl }}/archive">year</a>, <a href="{{ site.baseurl }}/archive/category">category</a>, or by <a href="{{ site.baseurl }}/archive/tag">tag</a>.</p>
 
