--- a/syndication/stylish-blur.html
+++ b/syndication/stylish-blur.html
@@ -7,7 +7,7 @@ pagination:
 title: Stylish Blur
 ---
 
-<h1 id="stylish-blur">Stylish Blur</h1>
+<h1 id="stylish-blur"><a href="{{ site.baseurl }}/stylish-blur">Stylish Blur</a></h1>
   
 {% if paginator.page > 1 %}
   <h2 id="page-paginator-page-">Page {{ paginator.page }}</h2>
@@ -15,6 +15,7 @@ title: Stylish Blur
 
 <hr>
 
+<h3>Description</h3>
 <p>iPhoneography of <a href="https://instagram.com/jden">jden redden</a>. Shot, edited and uploaded from an iPhone 4.</p>
 
 <hr>
