--- a/syndication/stylish-blur.html
+++ b/syndication/stylish-blur.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-permalink: /blog/stylish-blur
+permalink: /blog/stylish-blur/
 pagination:
   enabled: true
   category: stylish-blur
