--- a/syndication/nerd-ramblings.html
+++ b/syndication/nerd-ramblings.html
@@ -9,7 +9,7 @@ description: "The miscellaneous tech related thoughts of jden redden."
 syndication_url: https://nerdramblings.tumblr.com
 ---
 
-<h1 id="stylish-blur"><a href="{{ site.baseurl }}/{{ page.pagination.category }}">{{ page.title) }}</a></h1>
+<h1 id="stylish-blur"><a href="{{ site.baseurl }}/{{ page.pagination.category }}">{{ page.title }}</a></h1>
   
 {% if paginator.page > 1 %}
   <h2 id="page-paginator-page-">Page {{ paginator.page }}</h2>
