--- a/syndication/thinking-laterally.html
+++ b/syndication/thinking-laterally.html
@@ -1,12 +1,16 @@
 ---
 layout: default
-permalink: /blog/tumblr/nerd-ramblings/
+permalink: /blog/tumblr/thinking-laterally/
 pagination:
   enabled: true
-  category: nerd-ramblings
-title: Nerd Ramblings
-description: "The miscellaneous tech related thoughts of jden redden."
-syndication_url: https://nerdramblings.tumblr.com
+  category: thinking-laterally
+title: Thinking Laterally
+description: "Jden Redden
+Blog no. 7 to further compartmentalise my mind.
+
+lateral thinking
+n. (Psychology) a way of solving problems by rejecting traditional methods and employing unorthodox and apparently illogical mean."
+syndication_url: https://thinkinglaterally.tumblr.com
 ---
 
 <h1 id="stylish-blur"><a href="{{ site.baseurl }}/{{ page.pagination.category }}">{{ page.title }}</a></h1>
