--- a/syndication/thinking-laterally.html
+++ b/syndication/thinking-laterally.html
@@ -5,10 +5,8 @@ pagination:
   enabled: true
   category: thinking-laterally
 title: Thinking Laterally
-description: "Jden Redden
-Blog no. 7 to further compartmentalise my mind.
-
-lateral thinking
+description: "Blog no. 7 to further compartmentalise my mind.\n\n
+lateral thinking\n
 n. (Psychology) a way of solving problems by rejecting traditional methods and employing unorthodox and apparently illogical mean."
 syndication_url: https://thinkinglaterally.tumblr.com
 ---
