--- a/syndication/stylish-blur.html
+++ b/syndication/stylish-blur.html
@@ -5,7 +5,7 @@ pagination:
   enabled: true
   category: stylish-blur
 title: Stylish Blur
-description: "iPhoneography of <a href="https://instagram.com/jden">jden redden</a>. Shot, edited and uploaded from an iPhone 4."
+description: "iPhoneography of jden redden. Shot, edited and uploaded from an iPhone 4."
 syndication_url: https://stylishblur.tumblr.com
 ---
 
