--- a/syndication/thinking-laterally.html
+++ b/syndication/thinking-laterally.html
@@ -5,8 +5,8 @@ pagination:
   enabled: true
   category: thinking-laterally
 title: Thinking Laterally
-description: "Blog no. 7 to further compartmentalise my mind.\n\n
-lateral thinking\n
+description: "Blog no. 7 to further compartmentalise my mind.<br>
+lateral thinking<br>
 n. (Psychology) a way of solving problems by rejecting traditional methods and employing unorthodox and apparently illogical mean."
 syndication_url: https://thinkinglaterally.tumblr.com
 ---
