--- a/syndication/thinking-laterally.html
+++ b/syndication/thinking-laterally.html
@@ -6,7 +6,7 @@ pagination:
   category: thinking-laterally
 title: Thinking Laterally
 description: "Blog no. 7 to further compartmentalise my mind.<br><br>
-lateral thinking<br>
+<em>lateral thinking</em><br>
 n. (Psychology) a way of solving problems by rejecting traditional methods and employing unorthodox and apparently illogical mean."
 syndication_url: https://thinkinglaterally.tumblr.com
 ---
