--- a/syndication/one-random-piece-of-wisdom-at-a-time.html
+++ b/syndication/one-random-piece-of-wisdom-at-a-time.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 permalink: /blog/syndication/one-random-piece-of-wisdom-at-a-time/
 pagination:
   enabled: true
