--- a/hosting.html
+++ b/hosting.html
@@ -5,7 +5,7 @@ permalink: /hosting/
 non-blog: true
 ---
 
-<p>This page is being delivered by BunnyCDN's <span id="server"></span> server in <span id="city"></span> <span id="country"></span>.</p>
+<p>This page is being delivered by BunnyCDN's <strong><span id="server"></span></strong> server in <strong><span id="city"></span></strong> <span id="country"></span>.</p>
 
 <script>
   function serverLookup(val) {
